--- a/style.css
+++ b/style.css
@@ -222,6 +222,11 @@ body {
     flex: 1 1 40%;
 }
 
+.education {
+    flex: 1 1 60%;
+    margin-right: 50px;
+}
+
 .additional-info__education {
     margin-bottom: 20px;
 }
